FIX(Frontend): Transparent Scrollbar

--- a/frontend/apps/movies/src/styles.scss
+++ b/frontend/apps/movies/src/styles.scss
@@ -19,8 +19,8 @@ body {
 
 /* Áp dụng cho toàn bộ trang */
 * {
-    scrollbar-width: thin;
-    scrollbar-color: #888 rgb(50, 50, 50);
+    scrollbar-width: none;
+    scrollbar-color: #888 transparent;
 }
 
 ::-webkit-scrollbar {
@@ -29,7 +29,7 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background: rgb(50, 50, 50);
+    background: transparent;
     border-radius: 10px;
 }
 
